[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "raypy"
version = "0.1.0"
requires-python = ">=3.8"
description = "Parallel Python functions powered by Rust + Rayon"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Soumalya Das", email = "geniussantu1983@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]
